# Agentic-AI-Compliance-Risk-Platform

./: .dockerignore  .env.example  .env.llm.example  .env.production.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.production.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
app/: __init__.py  config.py  runtime_config.py
app/agents/: graph.py  state.py
app/api/: errors.py  main.py  (+1 more)
data/: legal_sources_manifest.json
docs/: ARCHITECTURE.md  DEMO.md  MILESTONES.md  PRODUCTION.md  PRODUCTION_LIKE_TESTING.md  REQUIREMENTS_COVERAGE.md  TEST_WITH_OPENAI_KEY.md
frontend/: streamlit_app.py
scripts/: ingest_pinecone.py  ingest_qdrant.py  migrate_db.py  register_legal_source.py  run_mcp_server.py  security_check.py  smoke_llm.py  smoke_production_stack.py  validate_legal_sources.py
tests/: conftest.py  test_api.py  test_auth_rbac.py  test_database_migrations.py  test_demo_docs.py  test_demo_scenarios.py  test_embeddings_and_vector_store.py  test_evaluation_suite.py  test_evidence_routes.py  test_frontend_static.py  test_gap_analyzer.py  test_guardrails.py  test_human_review.py  test_incident_routes.py  test_inventory_fields.py  test_langgraph_workflow.py  test_llm_refiner.py  test_llm_usage.py  test_mcp_server.py  test_multi_tenancy.py  test_optional_integrations.py  test_rag_ingest.py  test_regulatory_retriever.py  test_requirements_routes.py  test_risk_classifier.py  test_risk_register_routes.py  test_runtime_status.py  test_schema_modules.py  test_structured_intake.py  test_system_card_generator.py
(+129 files in other folders)
