[project]
name = "ai-governance-compliance-platform"
version = "0.1.0"
description = "Agentic AI governance, risk, compliance, and audit-readiness platform."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "streamlit>=1.35",
  "requests>=2.32",
  "pytest>=8.2",
  "httpx>=0.27",
  "langgraph>=0.2",
  "langchain>=0.2",
  "fastmcp>=2.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

